--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1>
       Salom! Mening
       <br />
-      ismim <span class="underline">Doston Nabotov</span>.
+      ismim <span class="underline">Olimov Umid</span>.
     </h1>
     <p>
       Men O'zbekistonda yashayman. Hozirda Web dasturlash sohasini o'rganyapman. Kelajakda IT sohasida mutaxassis
